# agl-service-monitor

./: README.md  meson.build
src/: main.cpp  meson.build  monitor-can-helper.cpp  monitor-can-helper.hpp  monitor-service.cpp  monitor-service.hpp  vis-config.cpp  vis-config.hpp  vis-session.cpp  vis-session.hpp
systemd/: agl-service-monitor.service  meson.build
